--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prebuild":"npx tsc",
-    "start": "npx tsc watch ./src/index.ts"
+    "dev": "nodemon ./src/index.ts",
+    "prebuild": "npx tscp",
+    "build": "npx tsc",
+    "start": "node ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
